...
                          fontWeight: FontWeight.w400,
                          letterSpacing: 0.8,
                        ),
                  ),
                  const SizedBox(height: 48),
                  CustomButton(
                    text: 'Login',
                    onPressed: () {
                      Navigator.pushNamed(context, AppRoutes.login);
                    },
                  ),
                  const SizedBox(height: 12),
                  CustomButton(
...
